# dgflow

./: .active-project  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  skills-lock.json  tsconfig.json
.agents/skills/cxas-cuj-report-generator/: SKILL.md
.agents/skills/cxas-sim-eval/: SKILL.md
.github/workflows/: ci.yml  commitlint.yml
.omp/agents/: ponytail-auditor.md
cx/: README.md
docs/: conventions.md  cxas-platform.md  production-config.md
docs/adr/: 0001-multi-agent-topology.md
docs/agents/: domain.md  triage-labels.md
docs/superpowers/plans/: 2026-06-18-night-line-plan.md  2026-06-20-night-line-cxas-plan.md
docs/superpowers/specs/: 2026-06-18-night-line-design.md
firestore/: personas.json  seed-luna.ts  seed.ts
landing/: DEPLOY.md  index.html  style.css
night-line/: experiment_log.md  gecx-config.json  tdd.md  todo.md
night-line/cxas_app/: app.json
night-line/cxas_app/NightLine/: app.json
night-line/cxas_app/NightLine/_shared/: persona_callbacks.py
night-line/cxas_app/NightLine/agents/luna_agent/: instruction.txt  luna_agent.json
night-line/cxas_app/NightLine/agents/root_agent/: instruction.txt  root_agent.json
night-line/cxas_app/NightLine/agents/sol_agent/: instruction.txt  sol_agent.json
night-line/cxas_app/NightLine/agents/viktor_agent/: instruction.txt  viktor_agent.json
night-line/cxas_app/NightLine/guardrails/LunaInCharacterDeflection/: LunaInCharacterDeflection.json
night-line/cxas_app/NightLine/guardrails/LunaOffTopicBlock/: LunaOffTopicBlock.json
night-line/cxas_app/NightLine/guardrails/LunaSafetyFilter/: LunaSafetyFilter.json
night-line/cxas_app/NightLine/guardrails/SolInCharacterDeflection/: SolInCharacterDeflection.json
night-line/cxas_app/Night_Line/: app.json
night-line/evals/callback_tests/: conftest.py
night-line/evals/callback_tests/tests/: test_get_memory_tool.py  test_init_callback.py
night-line/evals/goldens/: silence_handling.golden.yaml  silence_handling_luna.golden.yaml
night-line/evals/guardrail_evals/: luna_guardrails.yaml
night-line/evals/simulations/: content_deflection.yaml  content_deflection_luna.yaml  content_deflection_sol.yaml  content_deflection_viktor.yaml  first_call.yaml  first_call_luna.yaml  first_call_sol.yaml  first_call_viktor.yaml  graceful_degradation.yaml  return_caller_s1.yaml  return_caller_s2.yaml  routing_evals.yaml
night-line/evals/tool_tests/: get_memory.yaml  save_memory.yaml  save_turn.yaml
night-line/scripts/: check_session_params.py
scripts/: gate-check.py  seed-personas.py
src/: config.ts  facts.ts  gemini.ts  health.ts  index.ts  memory.ts  orchestrator.ts  personas.ts  types.ts
tests/: facts.test.ts  gemini-auth.test.ts  gemini.test.ts  memory.test.ts  orchestrator.test.ts  persona.test.ts  test_instruction_txt.py
(+34 files in other folders)
