[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "night-line"
version = "0.1.0"
description = "Night Line — AI companion service built on CXAS"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-firestore>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mdformat>=0.7.0",
    "pytest>=8.0.0",
    "pre-commit>=3.0.0",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["night_line"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".agents/", "night-line/", "node_modules/", ".venv/", "dist/", "build/", "cx/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
