[project]
name = "night-line"
version = "0.1.0"
description = "Night Line — AI companion service built on CXAS"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "cxas-scrapi>=1.4.1",
    "google-cloud-firestore>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.8",
    "mdformat>=0.7.0",
    "pytest>=8.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".agents/", "node_modules/", ".venv/", "dist/", "build/", "cx/"]  # ponytail: .agents/ = skill files (own standards), node_modules/ dist/ build/ cx/ = stale or generated

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# ponytail: cxas lint (C009) requires Optional[X] syntax — suppress ruff's UP045 counter-rule
"night-line/cxas_app/**/*.py" = ["UP045"]

[tool.pytest.ini_options]
testpaths = ["tests", "night-line/evals/callback_tests/tests"]
